Fixed some design and layout issues to make responsive.

--- a/webapp/app.css
+++ b/webapp/app.css
@@ -26,7 +26,7 @@ header h1 {
   position: relative;
   top: -105px;
   left: 105px;
-  width: 300px;
+  right: -105px;
   padding-left: 20px;
   margin-top: 20px;
 }
@@ -62,9 +62,10 @@ input {
 
 input.searchBox {
   width: 300px;
+  text-indent: 20px;
   border-radius: 20px 0px 0px 20px;
   background-color: #333;
-  padding-left: 40px;
+  padding: 0px;
   color: #888;
   font-weight: lighter;
 }
@@ -78,6 +79,11 @@ input.searchButton {
   cursor: pointer;
   height: 53px;
   border: none
+}
+
+input.searchBox:focus {
+  background-color: #555;
+  color: white;
 }
 
 input.searchButton:hover {
@@ -94,13 +100,28 @@ input.searchButton:hover {
   flex-wrap: wrap;
 }
 .tile {
-  width: 100%;
+  width: 310px;
+  max-width: 100%;
   margin: 20px;
-  background-color: #444;
+  /* background-color: #444; */
+  margin-left: auto;
+  margin-right: auto;
+  /* text-overflow: ellipsis; */
+  /* box-shadow: 3px 3px 5px Black; */
+}
+
+.innerTile {
+  width: 300px;
+  max-width: 100%;
+  margin: 20px;
+  height: 100%;
+  background-color: #555;
   margin-left: auto;
   margin-right: auto;
   text-overflow: ellipsis;
+  box-shadow: 3px 3px 5px Black;
 }
+
 .poster {
   padding: 10px;
   display: inline;
@@ -108,8 +129,8 @@ input.searchButton:hover {
 
 }
 .poster img {
-  max-width: 150px;
-  height: 200px;
+  max-width: 100%;
+  width: 280px;
   object-fit: cover;
 }
 
@@ -118,12 +139,13 @@ input.searchButton:hover {
   float: left;
   text-overflow: ellipsis;
   padding-left: 20px;
+  padding-right: 20px;
 }
 
 .resultsText h3 {
   padding-top: 10px;
   margin: 0px;
-  text-align: left;
+  text-align: center;
   font-family: sans-serif;
   font-size: 30px;
   color: LightBlue;
@@ -131,9 +153,32 @@ input.searchButton:hover {
 }
 
 .resultsText p {
-  text-align: left;
+  text-align: center;
   font-family: sans-serif;
   font-weight: lighter;
   font-size: 15px;
   color: LightBlue;
+}
+
+@media only screen and (max-width: 460px) {
+  .searchCenter {
+    width: auto;
+  }
+  input.searchBox {
+    width:100%;
+    padding: 0px;
+    border-radius: 0px;
+    border-left: none;
+    border-right: none;
+  }
+
+  input.searchButton {
+    width: 100%;
+    border-radius: 0px;
+  }
+
+  header h1{
+    max-width: 200px;
+    font-size: 6vw;
+  }
 }
